--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
-      - uses: Platane/snk/svg-only@master
+      - uses: Platane/snk/svg-only@v2.2.1
         id: snake-gif
         with:
           github_user_name: franklin-albuquerque
