--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,6 @@ on:
     branches:
       - main
 
-
 jobs:
   generate:
     runs-on: ubuntu-latest
@@ -18,17 +17,26 @@ jobs:
 
     steps:
       - name: generate contribuicoes-github-animacao-cobrinha.svg
-        uses: Platane/snk/svg-only@v2
+        uses: Platane/snk@master
         with:
           github_user_name: franklin-albuquerque
           outputs: |
             dist/contribuicoes-github-animacao-cobrinha.svg
             dist/contribuicoes-github-animacao-cobrinha-dark.svg?palette=github-dark
+            
+      - run: git status
+
+      - name: Enviar alterações
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: master
+          force: true
 
       - name: push contribuicoes-github-animacao-cobrinha.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
-          target_branch: output
+          target_branch: main
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
