--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: Animação do gráfico de contribuições
 
 on:
-  # Atualiza a cada 12 horas
+  # Atualiza a cada 24 horas
   schedule:
-    - cron: "* */12 * * *"
+    - cron: "* */24 * * *"
   workflow_dispatch:
 
   push:
@@ -15,7 +15,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout
       - uses: actions/checkout@main
+
+      - name: Importar chave GPG
+        uses: crazy-max/ghaction-github-pages@master
+        with:
+          gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
+          git_user_signingkey: true
+          git_commit_gpgsign: true
 
       - name: Gerar animação da cobrinha
         uses: Platane/snk/svg-only@main
