Atualizar main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,13 +38,13 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: master
+          branch: main
           force: true
 
       - uses: crazy-max/ghaction-github-pages@dev
         with:
           target_branch: output
-          build_dir: .
+          build_dir: dir
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
